<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/favorites_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="55dp"
        android:layout_marginBottom="60dp">

    </android.support.v7.widget.RecyclerView>

    <ImageView
        android:padding="30dp"
        android:id="@+id/broken_heart"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:src="@drawable/broken_heart"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>

    <TextView
        android:layout_above="@id/broken_heart"
        android:id="@+id/no_fav_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_favs"
        android:textSize="20sp"
        android:textColor="@color/textColor"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>

    <TextView
        android:layout_below="@id/no_fav_text"
        android:id="@+id/doubleTap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/double_taps"
        android:textSize="12sp"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>

    <Button
        android:id="@+id/add_fav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/broken_heart"
        android:layout_centerHorizontal="true"
        android:text="@string/add_fav_btn"/>


</RelativeLayout>