<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/aboutToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:theme="@style/ToolBarStyle"></android.support.v7.widget.Toolbar>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@drawable/shadow" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--Profile-->
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:background="@color/colorPrimary"
                app:cardCornerRadius="4dp"
                app:cardPreventCornerOverlap="false">

                <RelativeLayout
                    android:id="@+id/myInfo"
                    android:layout_width="match_parent"
                    android:layout_height="320dp"
                    android:background="@color/colorPrimary">


                    <com.facebook.drawee.view.SimpleDraweeView
                        android:id="@+id/codingScreen"
                        android:layout_width="match_parent"
                        android:layout_height="130dp"
                        android:scaleType="centerCrop" />

                    <com.facebook.drawee.view.SimpleDraweeView
                        android:id="@+id/profile_image"
                        android:layout_width="96dp"
                        android:layout_height="96dp"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="64dp"
                        android:scaleX="-1"
                        fresco:roundAsCircle="true" />

                    <TextView
                        android:id="@+id/Myname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/profile_image"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="4dp"
                        android:fontFamily="monospace"
                        android:text="@string/myname"
                        android:textColor="@android:color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/aboutMe"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/Myname"
                        android:layout_marginLeft="12dp"
                        android:layout_marginTop="16dp"
                        android:fontFamily="monospace"
                        android:text="@string/aboutme"
                        android:textColor="@android:color/white"
                        android:textStyle="normal" />

                    <LinearLayout
                        android:layout_below="@id/aboutMe"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_margin="16dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/github"
                            android:layout_width="0dp"
                            android:layout_height="20dp"
                            android:layout_weight="1"
                            android:src="@drawable/github" />

                        <ImageView
                            android:id="@+id/gmail"
                            android:layout_width="0dp"
                            android:layout_height="20dp"
                            android:layout_weight="1"
                            android:src="@drawable/gmail" />

                        <ImageView
                            android:id="@+id/linkedIn"
                            android:layout_width="0dp"
                            android:layout_height="20dp"
                            android:layout_weight="1"
                            android:src="@drawable/linkedin" />

                    </LinearLayout>

                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:background="@color/colorBackground"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    android:id="@+id/shareApp"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:foreground="?selectableItemBackground"
                    app:cardCornerRadius="4dp"
                    app:cardPreventCornerOverlap="false">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimary"
                        android:gravity="center"
                        android:text="@string/shareApp"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />


                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/rateApp"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:foreground="?selectableItemBackground"
                    app:cardCornerRadius="4dp"
                    app:cardPreventCornerOverlap="false">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimary"
                        android:gravity="center"
                        android:text="@string/rateApp"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />

                </android.support.v7.widget.CardView>

            </LinearLayout>

            <android.support.v7.widget.CardView
                android:id="@+id/moreFromDev"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:background="@color/colorPrimary"
                app:cardCornerRadius="4dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackground"
                app:cardPreventCornerOverlap="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:foreground="?selectableItemBackground"
                    android:orientation="horizontal"
                    android:padding="12dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="6"
                        android:layout_height="wrap_content"
                        android:text="@string/morefromdev"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:src="@drawable/googleplay"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/translate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:background="@color/colorPrimary"
                app:cardCornerRadius="4dp"
                android:clickable="true"
                android:focusable="true"
                android:onClick="showTranslate"
                android:foreground="?selectableItemBackground"
                app:cardPreventCornerOverlap="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:foreground="?selectableItemBackground"
                    android:orientation="vertical"
                    android:padding="12dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/help_translate"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="monospace"
                        android:text="@string/contribute"
                        android:textColor="@android:color/white"
                        android:textSize="14sp" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/contributors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:background="@color/colorPrimary"
                app:cardCornerRadius="4dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackground"
                app:cardPreventCornerOverlap="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:foreground="?selectableItemBackground"
                    android:orientation="vertical"
                    android:padding="12dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/contributors"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:background="@color/colorPrimary"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackground"
                app:cardCornerRadius="4dp"
                app:cardPreventCornerOverlap="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/copyright_claim"
                        android:textColor="@android:color/white"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:fontFamily="monospace"
                        android:text="@string/cpyrghtText"
                        android:textColor="@android:color/white"
                        android:textSize="14sp" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>